# data_structures

./: CMakeLists.txt
include/array_list/: array_list.h
src/array_list/: array_list.c
tests/: array_list_create_struct_test.c  array_list_create_test.c
